fixed the images they were not stretching full width

--- a/Wireframe/style.css
+++ b/Wireframe/style.css
@@ -94,14 +94,27 @@ body {
   background-color: rgb(162, 187, 216);
 }
 .article1, .article2 {
+  width: 100%;
   border-bottom: 20px;
-   img {height: 400px;} /*how do i resize all images */
+   /*how do i resize all images */
+}
+
+.text-container img {
+  width: 100%;
+  height: auto; /* Maintain aspect ratio */
+  object-fit: cover;
+  height: 400px;
+  padding: 10px;
 }
 
 footer {
   grid-area: footer;
   background-color: azure;
   padding: 20px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
 
 
